Moved the ajax dir into the src dir.

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Lagdo\\Adminer\\": "src/",
-            "Lagdo\\Adminer\\Ajax\\": "ajax/"
+            "Lagdo\\Adminer\\": "src/"
         },
         "files": [
             "src/start.php"
