--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "autoload": {
         "psr-4": {
+            "Lagdo\\Adminer\\App\\": "app/",
             "Lagdo\\Adminer\\": "src/"
         },
         "files": [
